k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cairiq-companion-prod
  namespace: cairiq-prod
spec:
  selector:
    app: cairiq-companion-prod
  ports:
    - name: http
      port: 80
      targetPort: http
